Update src/main/java/org/hyperledger/bela/converter/RocksDBKeyValueStorageConverterFactory.java
Co-authored-by: Jason Frame <jason.frame@consensys.net>